@@ -1,6 +1,6 @@
 dnl AC_INIT does not take a macro as a version nr: set it separately! - Bram
 AC_INIT([ODE],[0.11.1],[ode@ode.org])
-# AC_CONFIG_SRCDIR([ode/src/ode.cpp])
+AC_CONFIG_SRCDIR([ode/src/ode.cpp])
 ODE_RELEASE=0.11.1
 AC_SUBST(ODE_RELEASE)
 
@@ -336,16 +336,75 @@ AC_CONFIG_SUBDIRS([ou])
 AM_CONDITIONAL(ENABLE_OU, test x$use_ou = xyes)
 
 
+col_cylinder_cylinder=none
+col_capsule_cylinder=none
+col_convex_box=none
+col_convex_capsule=none
+col_convex_cylinder=none
+col_convex_sphere=default
+col_convex_convex=default
+
 
 libccd=no
-AC_ARG_WITH(libccd, AS_HELP_STRING([--with-libccd=[cyl-cyl|no]],
-        [use the libccd library for specified collision detection @<:@default=no@:>@]),
-        libccd=$withval,libccd=no
-)
+libccd_all=no
+AC_ARG_ENABLE(libccd, AS_HELP_STRING([--enable-libccd],
+            [enable all libccd colliders]),
+            libccd_all=$enableval)
+if test x$libccd_all = xyes
+then
+    col_cylinder_cylinder=libccd
+    col_capsule_cylinder=libccd
+    col_convex_box=libccd
+    col_convex_capsule=libccd
+    col_convex_cylinder=libccd
+    col_convex_sphere=libccd
+    col_convex_convex=libccd
+    libccd=yes
+fi
+
+
+AC_ARG_WITH([cylinder-cylinder], AS_HELP_STRING([--with-cylinder-cylinder=@<:@none,libccd@:>@], [use specific collider for cylinder-cylinder]),
+            col_cylinder_cylinder=$withval)
+
+AC_ARG_WITH([capsule-cylinder], AS_HELP_STRING([--with-capsule-cylinder=@<:@none,libccd@:>@], [use specific collider for capsule-cylinder]),
+            col_capsule_cylinder=$withval)
+
+AC_ARG_WITH([convex-box], AS_HELP_STRING([--with-convex-box=@<:@none,libccd@:>@], [use specific collider for convex-box]),
+            col_convex_box=$withval)
+
+AC_ARG_WITH([convex-capsule], AS_HELP_STRING([--with-convex-capsule=@<:@none,libccd@:>@], [use specific collider for convex-capsule]),
+            col_convex_capsule=$withval)
+
+AC_ARG_WITH([convex-cylinder], AS_HELP_STRING([--with-convex-cylinder=@<:@none,libccd@:>@], [use specific collider for convex-cylinder]),
+            col_convex_cylinder=$withval)
+
+AC_ARG_WITH([convex-sphere], AS_HELP_STRING([--with-convex-sphere=@<:@default,libccd@:>@], [use specific collider for convex-sphere]),
+            col_convex_sphere=$withval)
+
+AC_ARG_WITH([convex-convex], AS_HELP_STRING([--with-convex-convex=@<:@default,libccd@:>@], [use specific collider for convex-convex]),
+            col_convex_convex=$withval)
+
+if test x$col_cylinder_cylinder = xlibccd -o \
+    x$col_capsule_cylinder = xlibccd -o \
+    x$col_convex_box = xlibccd -o \
+    x$col_convex_capsule = libccd -o \
+    x$col_convex_cylinder = xlibccd -o \
+    x$col_convex_sphere = libccd -o \
+    x$col_convex_convex = libccd
+then
+    libccd=yes
+fi
+
 AC_CONFIG_SUBDIRS([libccd])
 
 AM_CONDITIONAL(LIBCCD, test x$libccd != xno)
-AM_CONDITIONAL(LIBCCD_CYL_CYL, test x$libccd = xcyl-cyl)
+AM_CONDITIONAL(LIBCCD_CYL_CYL,          test x$col_cylinder_cylinder = xlibccd)
+AM_CONDITIONAL(LIBCCD_CAP_CYL,          test x$col_capsule_cylinder = xlibccd)
+AM_CONDITIONAL(LIBCCD_CONVEX_BOX,       test x$col_convex_box = xlibccd)
+AM_CONDITIONAL(LIBCCD_CONVEX_CAP,       test x$col_convex_capsule = xlibccd)
+AM_CONDITIONAL(LIBCCD_CONVEX_CYL,       test x$col_convex_cylinder = xlibccd)
+AM_CONDITIONAL(LIBCCD_CONVEX_SPHERE,    test x$col_convex_sphere = xlibccd)
+AM_CONDITIONAL(LIBCCD_CONVEX_CONVEX,    test x$col_convex_convex = xlibccd)
 
 
 
@@ -441,7 +500,14 @@ echo "  Use drawstuff:           $drawstuff"
 echo "  Demos enabled:           $enable_demos"
 echo "  Use OPCODE:              $opcode"
 echo "  Use GIMPACT:             $gimpact"
-echo "  Use libccd:              $libccd"
+echo "  Custom colliders:"
+echo "        cylinder-cylinder: $col_cylinder_cylinder"
+echo "        capsule-cylinder:  $col_capsule_cylinder"
+echo "        convex-box:        $col_convex_box"
+echo "        convex-capsule:    $col_convex_capsule"
+echo "        convex-cylinder:   $col_convex_cylinder"
+echo "        convex-sphere:     $col_convex_sphere"
+echo "        convex-convex:     $col_convex_convex"
 echo "  Is target a Pentium:     $pentium"
 echo "  Is target x86-64:        $cpu64"
 echo "  Use old opcode trimesh collider: $old_trimesh"
